[UPD]  if statement added on currentsquare click event

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         </div>
     </header>
     <main>
+        <h3 class="score">Hai totalizzato un ppunteggio di: </h3>
         <div id="grid"></div>
     </main>
     <footer></footer>
