--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
     </header>
     <main>
-        <h3 class="score">Hai totalizzato un ppunteggio di: </h3>
+        <h3 class="score my-4  text-center"></h3>
         <div id="grid"></div>
     </main>
     <footer></footer>
